<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    tools:context=".QueueActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_blue"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/ananda"
                android:text="@string/app_name"
                android:textColor="@color/whiteblue"
                android:textSize="23sp" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_other_user"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/profileInitial"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_other_user"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/GreetingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/merienda"
        android:textAlignment="center"
        android:textColor="@color/emerald"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:text="@string/hello_join_queue" />

    <TextView
        android:id="@+id/ticketNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merienda"
        android:text="@string/ticket_number"
        android:textColor="@color/emerald"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GreetingTextView" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alcemodemo"
        android:text="@string/current_queue"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketNumberTextView" />

    <TextView
        android:id="@+id/EmptyQueueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/merienda"
        android:text="@string/empty_queue"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmptyQueueTextView">

        <LinearLayout
            android:id="@+id/QueueContainer"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:background="@drawable/card_blue_corner"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" />
    </HorizontalScrollView>
<RelativeLayout
    android:id="@+id/relabuttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/HorizontalScrollView" >
    <Button
        android:id="@+id/JoinQueueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/join_queue"
        />

    <Button
        android:id="@+id/LeaveQueueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/violet"
        android:text="@string/leave_queue"
        />

    <Button
        android:id="@+id/PriorityJoinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/blue"
        android:text="Priority Join"
        android:textColor="#FFFFFF" />
</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="300dp"
    app:layout_constraintTop_toBottomOf="@+id/HorizontalScrollView"
    android:id="@+id/relabuttons2">
    <Button
        android:id="@+id/StepAwayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/emerald"
        android:text="@string/step_away"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/ReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/emerald"
        android:text="@string/im_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StepAwayButton" />
</RelativeLayout>
    <TextView
        android:id="@+id/WaitingTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/alcemodemo"
        android:text="@string/estimated_waiting_time"
        android:textColor="@color/emerald"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relabuttons2" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lLoading"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="150sp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WaitingTimeTextView"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/clock" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="150dp"
        android:background="@color/whiteblue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lLoading"
        app:menu="@menu/bottom_navv_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>